--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NGINX on Railway</title>
+    <title>NGINX web server for HNG DevOpstitle>
     <meta name="description" content="Choo Choo!" />
 
     <link rel="icon" href="/favicon.ico" />
@@ -13,25 +13,6 @@
   </head>
 
   <body>
-    <main>
-      <img
-        src="https://railway.app/brand/logo-light.svg"
-        alt="Railway logo"
-        class="logo"
-      />
-
-      <h1>NGINX on Railway</h1>
-
-      <p>
-        Choo Choo! This is an example of an NGINX static site running on
-        Railway.
-        <a
-          href="https://github.com/railwayapp/starters/tree/master/examples/nginx"
-          >View source</a
-        >.
-      </p>
-    </main>
-
-    <script src="/script.js"></script>
+    <p>Welcome to DevOps Stage 0 - Boluwaife Olusi/Grim</p>
   </body>
 </html>
