--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>NGINX web server for HNG DevOpstitle>
+    <title>NGINX web server for HNG DevOps</title>title>
     <meta name="description" content="Choo Choo!" />
 
     <link rel="icon" href="/favicon.ico" />
